--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Adding</title>
-    <link rel="stylesheet" href="demo2.css">
+    <title>Frontend 2 prathamesh Karbele B2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
@@ -33,6 +33,6 @@
        <table id="tb">
         <p id="a">You have 0 Employees.</p>
        </table>
-       <script src="demo3.js"></script>
+       <script src="Script.js"></script>
 </body>
 </html>
